# cutagent

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTEXT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.cursor/skills/cutagent-develop/: SKILL.md
.cursor/skills/cutagent-git-workflow/: SKILL.md
.cursor/skills/cutagent-merge/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
cutagent/: __init__.py  __main__.py  animation.py  animation_ops.py  audio_ops.py  cli.py  doctor.py  engine.py  errors.py  ffmpeg.py  input_hardening.py  models.py  operations.py  probe.py  schema_registry.py  text_ops.py  tools.py  validation.py
cutagent/cli/: __init__.py  agent.py  analysis.py  audio.py  editing.py  execution.py  system.py  utils.py  visual.py
docs/: demo.tape  demo_edit.json
tests/: conftest.py  test_animation.py  test_audio_ops.py  test_beats.py  test_cli.py  test_doctor.py  test_engine.py  test_ffmpeg_discovery.py  test_models.py  test_operations.py  test_probe.py  test_screen_recording_pipeline.py  test_text_ops.py  test_validation.py
