[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cutagent"
version = "0.3.0"
description = "Agent-first video cutting library — declarative JSON edits powered by FFmpeg"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["video", "editing", "ffmpeg", "ai", "agent", "cli", "edl"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Video",
    "Topic :: Multimedia :: Video :: Non-Linear Editor",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "typer>=0.12.0",
]

authors = [{name = "Kevin Koch"}]

[project.urls]
Homepage = "https://github.com/DaKev/cutagent"
Repository = "https://github.com/DaKev/cutagent"
Issues = "https://github.com/DaKev/cutagent/issues"
Changelog = "https://github.com/DaKev/cutagent/blob/main/CHANGELOG.md"

[project.scripts]
cutagent = "cutagent.cli:main"

[project.optional-dependencies]
ffmpeg = ["static-ffmpeg>=3.0"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0"
]

[tool.setuptools.packages.find]
include = ["cutagent*"]

[tool.setuptools.package-data]
cutagent = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=cutagent --cov-report=term-missing"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "B", "W", "I"]
ignore = []

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
